--- a/Offer Lagbe/app/src/main/res/layout/demo_post.xml
+++ b/Offer Lagbe/app/src/main/res/layout/demo_post.xml
@@ -21,7 +21,7 @@
 
         <View
             android:id="@+id/view23"
-            android:layout_width="90dp"
+            android:layout_width="100dp"
             android:layout_height="22dp"
             android:layout_marginStart="8dp"
             android:background="#39BC03FA"
@@ -41,7 +41,7 @@
         <View
             android:id="@+id/view25"
             android:layout_width="wrap_content"
-            android:layout_height="160dp"
+            android:layout_height="@dimen/_230mdp"
             android:layout_marginStart="6dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="6dp"
